# journalpal

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml
authy/: models.py
core/: enums.py  forms.py  models.py  services.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/templates/core/: dashboard.html  index.html  navbar.html  skeleton.html
core/templatetags/: core_tags.py
journalpal/: asgi.py  urls.py  wsgi.py
journalpal/settings/: common.py
