[project]
name = "journalpal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crispy-bootstrap5>=2025.6",
    "dj-database-url>=3.0.0",
    "django>=5.2.3",
    "django-allauth>=65.9.0",
    "django-anymail>=13.0",
    "django-crispy-forms>=2.4",
    "django-extensions>=4.1",
    "django-htmx>=1.23.0",
    "gunicorn>=23.0.0",
    "openai>=1.88.0",
    "psycopg[binary]>=3.2.9",
    "python-decouple>=3.8",
    "redis>=6.2.0",
    "sentry-sdk[django]>=2.30.0",
    "werkzeug>=3.1.3",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipdb>=0.13.13",
    "wat>=0.6.0",
]

[tool.uv]
default-groups = []
